#8827 closed bug (fixed)
DriveSetup allows corruption of mounted filesystems
Reported by: | kallisti5 | Owned by: | waddlesplash |
---|---|---|---|
Priority: | high | Milestone: | R1/beta1 |
Component: | System/Kernel | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
To reproduce:
- Initialize Intel Partition Map on disk
- Create a new partition
- Format partition as BFS
- Mount partition
- Format disk as BFS
Check for mounted file systems on disk doesn't occur and you get an invalid mount on the system.
Change History (6)
follow-up: 2 comment:1 by , 13 years ago
comment:2 by , 13 years ago
Component: | Applications/DriveSetup → System/Kernel |
---|---|
Owner: | changed from | to
Replying to anevilyak:
This sounds more like something the kernel side of the disk systems should be forbidding, since that's where all the actual initialization work happens.
comment:3 by , 11 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:4 by , 11 years ago
Milestone: | R1 → R1/alpha5 |
---|
comment:6 by , 10 years ago
Milestone: | R1/alpha5 → R1/beta1 |
---|
Note:
See TracTickets
for help on using tickets.
This sounds more like something the kernel side of the disk systems should be forbidding, since that's where all the actual initialization work happens.