DriveSetup: Refactor gui layout as per ML thread

* Move disk partitioning systems under Disk menu
* Found and created bug #8827 (this wasn't introduced
  by my changes and was pre-existing)
* My testing resulted in no regressions, however
  please test though!